--- a/postgres/osfamilymap.yaml
+++ b/postgres/osfamilymap.yaml
@@ -1,4 +1,4 @@
-{% import_yaml "postgres/repo.yaml" as repo %}
+{% import_yaml rootdir ~ "/repo.yaml" as repo %}
 
 {% set release = repo.version|replace('.', '') %}
 
